# PyARINC424

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  record_info.py  record_maps.py  requirements.txt
.github/workflows/: python-tests.yml
src/: app.py  arinc.py  config.py  database.py  main.py  record_maps.py
src/pyarinc424/: arinc.py  config.py  database.py  main.py
tests/: test_arinc.py  test_config.py  test_database.py  test_main.py
